[project]
name = "tennis-swing-comparator"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "opencv-python-headless==4.10.0.84",
  "mediapipe==0.10.18",
  "numpy==1.26.4",
  "pillow==11.1.0",
]

[tool.vercel]
entrypoint = "app:app"
